Address PR review feedback on compatibility summary